Change graphs to pdf.

--- a/SplayTree/TeXt/text.tex
+++ b/SplayTree/TeXt/text.tex
@@ -15,10 +15,40 @@
 
 
 \usepackage[utf8]{inputenc}
+\usepackage{graphicx}
+\graphicspath{{../graphs/}}
 
 %% Prefer Latin Modern fonts
 \usepackage{lmodern}
 
 \begin{document}
-Lorem ipsum.
+	
+	\begin{figure}[h]	
+		\centering	
+		\includegraphics[scale=0.75]{graph_1}		
+	\end{figure}
+
+Lorem ipsum;
+
+	\begin{figure}[h]	
+		\centering	
+		\includegraphics[scale=0.75]{graph_2}		
+	\end{figure}
+
+Lorem ipsum;
+
+	\begin{figure}[h]	
+		\centering	
+		\includegraphics[scale=0.75]{graph_3}		
+	\end{figure}
+
+Lorem ipsum;
+
+	\begin{figure}[h]	
+		\centering	
+		\includegraphics[scale=0.75]{graph_4}		
+	\end{figure}
+
+Lorem ipsum;
+
 \end{document}
